syntax = "proto3";

package auth;

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/empty.proto";

option go_package = "github.com/2pizzzza/authGrpc/internal/auth_v1;auth_v1";

service Auth {

  rpc Login (LoginRequest) returns (AuthResponse);

  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message LoginRequest{
  string email = 1;
  string password = 2;
  int32 app_id = 3;

}

message AuthResponse{
  string token = 1;
}

message RegisterResponse{
  int64 user_id = 1;
}

message RegisterRequest{
  string email = 1;
  string password = 2;
}

message IsAdminRequest{
  int64 user_id = 1;
}

message IsAdminResponse{
  bool is_admin = 1;
}
